# rust-axum-demo

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
db_scripts/: init.sql
src/: lib.rs  main.rs  router.rs  server.rs
src/database/: tasks.rs
src/models/: app_state.rs  index.rs  mod.rs
src/routes/: index.rs  tasks.rs
src/tests/: app.rs  index.rs  mod.rs  tasks.rs
